force-app/main/default/objects/Survey_Response__c/fields/Answered__c.field-meta.xml
<CustomField>
    <fullName>Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>