force-app/main/default/objects/Survey_Response__c/fields/Negative__c.field-meta.xml
<CustomField>
    <fullName>Negative__c</fullName>
    <formula>IF(Passed__c = FALSE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>