force-app/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Answered__c</columns>
    <columns>Passed__c</columns>
    <columns>Comments__c</columns>
    <columns>Question__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>